infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: nasddatax.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
          - path: /api/equity/?(.*)
            backend:
              serviceName: equity-srv
              servicePort: 3000
          - path: /api/securities/?(.*)
            backend:
              serviceName: securities-srv
              servicePort: 3000

          - path: /api/brokers/?(.*)
            backend:
              serviceName: brokers-srv
              servicePort: 3000
